--- a/new-project/package.json
+++ b/new-project/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "axios": "^1.5.0",
     "tailwindcss": "^3.3.3"
   }
 }
