--- a/new-project/package.json
+++ b/new-project/package.json
@@ -40,6 +40,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "axios": "^1.5.0",
-    "tailwindcss": "^3.3.3"
+    "json-server": "^0.17.3",
+    "moment": "^2.29.4",
+    "tailwindcss": "^3.3.3",
+    "uuid": "^9.0.1"
   }
 }
