--- a/new-project/package.json
+++ b/new-project/package.json
@@ -7,6 +7,7 @@
     "@react-google-maps/api": "^2.19.2",
     "dot-env": "^0.0.1",
     "dotenv": "^16.3.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.1",
