--- a/new-project/.gitignore
+++ b/new-project/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 /public
+/src/DB/db.json
 
 # testing
 /coverage
@@ -23,3 +24,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+```
