--- a/new-project/package.json
+++ b/new-project/package.json
@@ -7,6 +7,7 @@
     "@react-google-maps/api": "^2.19.2",
     "dot-env": "^0.0.1",
     "dotenv": "^16.3.1",
+    "js-cookie": "^3.0.5",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,6 +44,7 @@
     "axios": "^1.5.0",
     "json-server": "^0.17.3",
     "moment": "^2.29.4",
+    "react-cookie": "^6.1.1",
     "tailwindcss": "^3.3.3",
     "uuid": "^9.0.1"
   }
